# sysc4001

./: README.md
assign1/: README  common.h  datatypes.h  device  device.c  test  test_file.c
assign1/include/event2/: event-config.h
assign1/lib/: libevent-2.0.so.5.1.9  libevent.la  libevent_core-2.0.so.5.1.9  libevent_core.la  libevent_extra-2.0.so.5.1.9  libevent_extra.la  libevent_openssl-2.0.so.5  libevent_openssl.la  libevent_pthreads.la
assign1/lib/pkgconfig/: libevent.pc  libevent_openssl.pc  libevent_pthreads.pc
assign1/src/: Makefile  cloud.c  common.h  controller.c  device  device.c  test_file.c
assign2/: CMakeLists.txt  Makefile  README
assign2/charts/: data.ods  data.xlsx
assign2/res/: 100KiB.txt  10KiB.txt  1MiB.txt  2MiB.txt  500KiB.txt
assign2/src/: common.h  consumer.c  host.c  producer.c
